--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "satha-home",
-  "version": "0.1.0",
-  "private": true,
+  "name": "by-satha-web",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
-    "@splinetool/react-spline": "^2.2.1",
-    "@splinetool/runtime": "^0.9.58",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^4.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
