--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "nth-check": "^2.0.1"
+    "gh-pages": "^4.0.0",
+    "nth-check": "^2.0.1",
+    "react-scripts": "^5.0.1"
   },
+  "homepage": "https://bysatha.github.io",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
